5xxsample/5xx.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: fivexxweb
    app: nginx
    version: v2
  name: 5xxweb-goapp
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: fivexxweb
      app: nginx
      version: v2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: fivexxweb
        app: nginx
        version: v2
    spec:
      containers:
      - image: chris530/fixexx:2
        imagePullPolicy: Always
        name: 5xxweb
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 5
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 5
        ports:
        - name: http-nginx
          containerPort: 80
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
