5xxsample/gateway.yml
kind: Gateway
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: chris-gateway
spec:
  servers:
    - hosts:
        - 'christest.dev.demandbase.com'
      port:
        name: http
        number: 80
        protocol: HTTP
  selector:
    istio: ingressgateway
