5xxsample/bad.yml
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: nginx
spec:
  hosts:
    - 'christest.dev.demandbase.com'
  gateways:
    - chris-gateway
  http:
  - route:
      - destination:
          host: nginx.auto.svc.cluster.local
          subset: v1
        weight: 50
      - destination:
          host: nginx.auto.svc.cluster.local
          subset: v2
        weight: 50
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: nginx
spec:
  host: nginx.auto.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
    trafficPolicy:
      loadBalancer:
        simple: RANDOM
  - name: v2
    labels:
      version: v2
    trafficPolicy:
      loadBalancer:
        simple: RANDOM
