5xxsample/destination-outlier-1.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-destination
spec:
  host: nginx-service.default.svc.cluster.local
  subsets:
  - name: v1
    labels:
      app: nginx
    trafficPolicy:
      connectionPool:
        http: {}
        tcp: {}
      loadBalancer:
        simple: RANDOM
  - name: v2
    labels:
      app: nginx
    trafficPolicy:
      connectionPool:
        http: {}
        tcp: {}
      loadBalancer:
        simple: RANDOM
      outlierDetection:
        baseEjectionTime: 20s
        consecutiveErrors: 2
        interval: 5s
        maxEjectionPercent: 100
