5xxsample/destination.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-destination
spec:
  host: nginx-service.default.svc.cluster.local
  subsets:
  - name: v1
    labels:
      app: nginx
  subsets:
  - name: v2
    labels:
      app: nginx
