5xxsample/good.yml
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: nginx
spec:
  hosts:
    - 'christest.dev.demandbase.com'
  gateways:
    - istio-system/chris-gateway
  http:
  - route:
      - destination:
          subnet: v1
          host: nginx.auto.svc.cluster.local
          port:
            number: 80
        weight: 100
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: 5xx
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: nginx
spec:
  host: nginx.auto.svc.cluster.local
  subsets:
  - name: v1
    labels:
      app: nginx
    trafficPolicy:
      connectionPool:
        http: {}
        tcp: {}
      loadBalancer:
        simple: RANDOM
      outlierDetection:
        baseEjectionTime: 3m
        consecutiveErrors: 1
        interval: 1s
        maxEjectionPercent: 100
