5xxsample/one-subsets.yml
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: nginx
spec:
  hosts:
    - 'christest.dev.demandbase.com'
  gateways:
    - chris-gateway
  http:
  - route:
      - destination:
          host: nginx.auto.svc.cluster.local
          subset: v1
        weight: 100
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: 5xx
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: nginx
spec:
  host: nginx.auto.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
    trafficPolicy:
      loadBalancer:
        simple: RANDOM
      outlierDetection:
        baseEjectionTime: 3m
        consecutiveErrors: 1
        interval: 1s
        maxEjectionPercent: 100
